Completely new personalization condition system, MUCH more flexible, but still has a problem with the system names that must be manually entered for it to work correctly.

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -1,3 +1,23 @@
+jmix_personalizationComponents=Personalization
+
+jnt_expression = Expression
+jnt_booleanExpression = Boolean expression
+
+jnt_andExpression = left AND right
+jnt_orExpression = left OR right
+jnt_notExpression = NOT expression
+jnt_equalsExpression = left EQUALS right
+jnt_smallerThanExpression = left SMALLER THAN right
+jnt_greaterThanExpression = left GREATER THAN right
+
+jnt_booleanValueExpression = Boolean value
+jnt_booleanValueExpression.j_value = Is true
+jnt_numberValueExpression = Number value
+jnt_cookieValueExpression = Cookie value
+jnt_cookieValueExpression.j_cookieName = Cookie name
+
+jnt_ifThenElse = IF condition THEN then ELSE else
+
 jnt_incrementCookie = Increment cookie
 jnt_incrementCookie.j_cookieName = Cookie name
 jnt_ifCookieHigherThan = If cookie higher than
@@ -9,3 +29,6 @@ label.ifCookieHigherThanArea = If cookie higher than area
 
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
+
+label.ifThenElse = If-Then-Else area
+label.ifThenElse.componentDescription = Conditional components that displays sub-components depending on whether a condition is met or not.
