Added country code matches and geoip

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -13,6 +13,11 @@ jnt_greaterThanExpression = left GREATER THAN right
 jnt_booleanValueExpression = Boolean value
 jnt_booleanValueExpression.j_value = Is true
 jnt_numberValueExpression = Number value
+jnt_numberValueExpression.j_value = Number
+jnt_stringValueExpression = String value
+jnt_stringValueExpression.j_value = String
+jnt_countryCodeValueExpression = Country code value
+jnt_countryCodeValueExpression.j_value = Country
 jnt_cookieValueExpression = Cookie value
 jnt_cookieValueExpression.j_cookieName = Cookie name
 
