- Some cleanup - Started implementation setUserProperty action - Working on better look for personalization components

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -25,15 +25,12 @@ jnt_ifThenElse = IF condition THEN then ELSE else
 
 jnt_incrementCookie = Increment cookie
 jnt_incrementCookie.j_cookieName = Cookie name
-jnt_ifCookieHigherThan = If cookie higher than
-jnt_ifCookieHigherThan.j_cookieName = Cookie name
-jnt_ifCookieHigherThan.j_cookieValue = Cookie value
-
-label.ifCookieHigherThan.componentDescription = This component displays the content items only if a cookie has a value higher than a limit.
-label.ifCookieHigherThanArea = If cookie higher than area
 
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
 
 label.ifThenElse = If-Then-Else area
 label.ifThenElse.componentDescription = Conditional components that displays sub-components depending on whether a condition is met or not.
+label.ifThenElse.ifCondition = IF
+label.ifThenElse.thenDisplay = THEN DISPLAY
+label.ifThenElse.elseDisplay = ELSE DISPLAY
