--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -20,11 +20,21 @@ jnt_countryCodeValueExpression = Country code value
 jnt_countryCodeValueExpression.j_value = Country
 jnt_cookieValueExpression = Cookie value
 jnt_cookieValueExpression.j_cookieName = Cookie name
+jnt_userPropertyValueExpression = Current user property value
+jnt_userPropertyValueExpression.j_propertyName = Property name
 
 jnt_ifThenElse = IF condition THEN then ELSE else
+jnt_eval = Evaluate an expression and display it
 
 jnt_incrementCookie = Increment cookie
 jnt_incrementCookie.j_cookieName = Cookie name
+jnt_incrementUserProperty = Increment user property
+jnt_incrementUserProperty.j_propertyName = Property name
+jnt_setUserProperty = Set a property for the current user
+jnt_setUserProperty.j_propertyName = Property name
+jnt_setUserProperty.j_propertyValue = Property value
+jnt_setUserLocation = Set current user's location using HTML5 location
+jnt_setUserLocation.j_propertyName = Property name
 
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
@@ -34,3 +44,7 @@ label.ifThenElse.componentDescription = Conditional components that displays sub
 label.ifThenElse.ifCondition = IF
 label.ifThenElse.thenDisplay = THEN DISPLAY
 label.ifThenElse.elseDisplay = ELSE DISPLAY
+
+label.eval = Expression evaluation area
+label.eval.componentDescription = Evaluates an expression it contains as a sub node and displays it.
+label.eval.evaluate = EVALUATE
