Implement AJAX methods to set/increment and remove a user's property

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -33,6 +33,13 @@ jnt_incrementUserProperty.j_propertyName = Property name
 jnt_setUserProperty = Set a property for the current user
 jnt_setUserProperty.j_propertyName = Property name
 jnt_setUserProperty.j_propertyValue = Property value
+jnt_ajaxSetUserProperty = Set current user property (AJAX)
+jnt_ajaxSetUserProperty.j_propertyName = Property name
+jnt_ajaxSetUserProperty.j_propertyValue = Property value
+jnt_ajaxIncrementUserProperty = Increment current user property (AJAX)
+jnt_ajaxIncrementUserProperty.j_propertyName = Property name
+jnt_ajaxRemoveUserProperty = Remove current user property (AJAX)
+jnt_ajaxRemoveUserProperty.j_propertyName = Property name
 jnt_setUserLocation = Set current user's location using HTML5 location
 jnt_setUserLocation.j_propertyName = Property name
 
@@ -44,6 +51,18 @@ label.ifThenElse.componentDescription = Conditional components that displays sub
 label.ifThenElse.ifCondition = IF
 label.ifThenElse.thenDisplay = THEN DISPLAY
 label.ifThenElse.elseDisplay = ELSE DISPLAY
+
+label.ajaxSetUserProperty = AJAX Set current user property
+label.ajaxSetUserProperty.componentDescription = Uses AJAX to store a property value into the current user's properties. This component will only execute in PREVIEW or LIVE mode.
+label.ajaxSetUserProperty.willSetPropertyToValue = This component will set current user''s property ''{0}'' to value ''{1}''
+
+label.ajaxIncrementUserProperty = AJAX Increment current user property
+label.ajaxIncrementUserProperty.componentDescription = Uses AJAX to increment a property value in the current user's properties. This component will only execute in PREVIEW or LIVE mode.
+label.ajaxIncrementUserProperty.willIncrementProperty = This component will increment current user''s property ''{0}''
+
+label.ajaxRemoveUserProperty = AJAX Removes a property for the current user
+label.ajaxRemoveUserProperty.componentDescription = Uses AJAX to remove a property value from the current user's properties. This component will only execute in PREVIEW or LIVE mode.
+label.ajaxRemoveUserProperty.willRemoveProperty = This component will remove current user''s property ''{0}''
 
 label.eval = Expression evaluation area
 label.eval.componentDescription = Evaluates an expression it contains as a sub node and displays it.
