--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -30,7 +30,9 @@ jnt_incrementCookie = Increment cookie
 jnt_incrementCookie.j_cookieName = Cookie name
 jnt_incrementUserProperty = Increment user property
 jnt_incrementUserProperty.j_propertyName = Property name
-jnt_setUserProperty = Set a property for the current user
+jnt_removeUserProperty = Remove current user property
+jnt_removeUserProperty.j_propertyName = Property name
+jnt_setUserProperty = Set current user property
 jnt_setUserProperty.j_propertyName = Property name
 jnt_setUserProperty.j_propertyValue = Property value
 jnt_ajaxSetUserProperty = Set current user property (AJAX)
@@ -40,6 +42,7 @@ jnt_ajaxIncrementUserProperty = Increment current user property (AJAX)
 jnt_ajaxIncrementUserProperty.j_propertyName = Property name
 jnt_ajaxRemoveUserProperty = Remove current user property (AJAX)
 jnt_ajaxRemoveUserProperty.j_propertyName = Property name
+
 jnt_setUserLocation = Set current user's location using HTML5 location
 jnt_setUserLocation.j_propertyName = Property name
 
@@ -60,9 +63,21 @@ label.ajaxIncrementUserProperty = AJAX Increment current user property
 label.ajaxIncrementUserProperty.componentDescription = Uses AJAX to increment a property value in the current user's properties. This component will only execute in PREVIEW or LIVE mode.
 label.ajaxIncrementUserProperty.willIncrementProperty = This component will increment current user''s property ''{0}''
 
-label.ajaxRemoveUserProperty = AJAX Removes a property for the current user
+label.ajaxRemoveUserProperty = AJAX Remove current user property
 label.ajaxRemoveUserProperty.componentDescription = Uses AJAX to remove a property value from the current user's properties. This component will only execute in PREVIEW or LIVE mode.
 label.ajaxRemoveUserProperty.willRemoveProperty = This component will remove current user''s property ''{0}''
+
+label.setUserProperty = Set current user property
+label.setUserProperty.componentDescription = Store a property value into the current user's properties. This component will only execute in PREVIEW or LIVE mode.
+label.setUserProperty.willSetPropertyToValue = This component will set current user''s property ''{0}'' to value ''{1}''
+
+label.incrementUserProperty = Increment current user property
+label.incrementUserProperty.componentDescription = Increment a property value in the current user's properties. This component will only execute in PREVIEW or LIVE mode.
+label.incrementUserProperty.willIncrementProperty = This component will increment current user''s property ''{0}''
+
+label.removeUserProperty = Remove current user property
+label.removeUserProperty.componentDescription = Removes a property from the current user's properties. This component will only execute in PREVIEW or LIVE mode.
+label.removeUserProperty.willRemoveProperty = This component will remove current user''s property ''{0}''
 
 label.eval = Expression evaluation area
 label.eval.componentDescription = Evaluates an expression it contains as a sub node and displays it.
