Add HTML5 location support & Google Maps display based on an expression

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -59,6 +59,10 @@ label.ajaxSetUserProperty = AJAX Set current user property
 label.ajaxSetUserProperty.componentDescription = Uses AJAX to store a property value into the current user's properties. This component will only execute in PREVIEW or LIVE mode.
 label.ajaxSetUserProperty.willSetPropertyToValue = This component will set current user''s property ''{0}'' to value ''{1}''
 
+label.ajaxSetUserProperty.html5Location = AJAX Set current user property to HTML5 Location
+label.ajaxSetUserProperty.html5Location.componentDescription = Uses AJAX to store into a property containing a current user's HTML 5 location (if available) into the current user's properties. The property value will not be used by this view and will be ignored. This component will only execute in PREVIEW or LIVE mode.
+label.ajaxSetUserProperty.html5Location.willSetPropertyToLocation = This component will set current user''s property ''{0}'' to the location of the current user.
+
 label.ajaxIncrementUserProperty = AJAX Increment current user property
 label.ajaxIncrementUserProperty.componentDescription = Uses AJAX to increment a property value in the current user's properties. This component will only execute in PREVIEW or LIVE mode.
 label.ajaxIncrementUserProperty.willIncrementProperty = This component will increment current user''s property ''{0}''
@@ -82,3 +86,7 @@ label.removeUserProperty.willRemoveProperty = This component will remove current
 label.eval = Expression evaluation area
 label.eval.componentDescription = Evaluates an expression it contains as a sub node and displays it.
 label.eval.evaluate = EVALUATE
+
+label.googleMapEval = Use expression to display Google Maps
+label.googleMapEval.componentDescription = Evaluates an expression to a location and render it in Google Maps
+label.googleMapEval.displayMap = DISPLAY IN GOOGLE MAP LOCATION
