--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -25,10 +25,11 @@ jnt_userPropertyValueExpression.j_propertyName = Property name
 
 jnt_ifThenElse = IF condition THEN then ELSE else
 jnt_eval = Evaluate an expression and display it
+jnt_googleMapEval = Evaluate an expression and display a map
 
 jnt_incrementCookie = Increment cookie
 jnt_incrementCookie.j_cookieName = Cookie name
-jnt_incrementUserProperty = Increment user property
+jnt_incrementUserProperty = Increment current user property
 jnt_incrementUserProperty.j_propertyName = Property name
 jnt_removeUserProperty = Remove current user property
 jnt_removeUserProperty.j_propertyName = Property name
@@ -42,9 +43,6 @@ jnt_ajaxIncrementUserProperty = Increment current user property (AJAX)
 jnt_ajaxIncrementUserProperty.j_propertyName = Property name
 jnt_ajaxRemoveUserProperty = Remove current user property (AJAX)
 jnt_ajaxRemoveUserProperty.j_propertyName = Property name
-
-jnt_setUserLocation = Set current user's location using HTML5 location
-jnt_setUserLocation.j_propertyName = Property name
 
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
