Add distance calculation expression as well as location value expression

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -10,6 +10,8 @@ jnt_equalsExpression = left EQUALS right
 jnt_smallerThanExpression = left SMALLER THAN right
 jnt_greaterThanExpression = left GREATER THAN right
 
+jnt_distanceInKilometersExpression = Distance between two locations (km)
+
 jnt_booleanValueExpression = Boolean value
 jnt_booleanValueExpression.j_value = Is true
 jnt_numberValueExpression = Number value
@@ -22,6 +24,9 @@ jnt_cookieValueExpression = Cookie value
 jnt_cookieValueExpression.j_cookieName = Cookie name
 jnt_userPropertyValueExpression = Current user property value
 jnt_userPropertyValueExpression.j_propertyName = Property name
+jnt_locationValueExpression = Geo location (latitude/longitude) value
+jnt_locationValueExpression.j_latitude = Latitude
+jnt_locationValueExpression.j_longitude = Longitude
 
 jnt_ifThenElse = IF condition THEN then ELSE else
 jnt_eval = Evaluate an expression and display it
