Add configuration for login and logout events

--- a/src/main/resources/org/jahia/defaults/config/properties/jahia-personalization.properties
+++ b/src/main/resources/org/jahia/defaults/config/properties/jahia-personalization.properties
@@ -1,2 +1,4 @@
 interceptHttpSessionListenerEvents=true
 interceptHttpSessionAttributeListenerEvents=true
+fireLoginEvent=true
+fireLogoutEvent=true
