New tracking algorithm uses login/logout events of Jahia 6.6

--- a/src/main/resources/org/jahia/defaults/config/properties/jahia-personalization.properties
+++ b/src/main/resources/org/jahia/defaults/config/properties/jahia-personalization.properties
@@ -2,3 +2,5 @@ interceptHttpSessionListenerEvents=true
 interceptHttpSessionAttributeListenerEvents=true
 fireLoginEvent=true
 fireLogoutEvent=true
+preserveSessionAttributesOnLogin=org.jahia.modules.personalization.trackingData
+preserveSessionAttributesOnLogout=org.jahia.modules.personalization.trackingData
