Add new tracking data view component

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -93,3 +93,6 @@ label.eval.evaluate = EVALUATE
 label.googleMapEval = Use expression to display Google Maps
 label.googleMapEval.componentDescription = Evaluates an expression to a location and render it in Google Maps
 label.googleMapEval.displayMap = DISPLAY IN GOOGLE MAP LOCATION
+
+label.trackingData = Tracking data
+label.trackingData.componentDescription = Displays tracking data for the current user
