Add new servlet to retrieve and update tracking data using REST-like operations. Also added a new tracking data updater that uses AJAX post to update the tracking data.

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -94,5 +94,8 @@ label.googleMapEval = Use expression to display Google Maps
 label.googleMapEval.componentDescription = Evaluates an expression to a location and render it in Google Maps
 label.googleMapEval.displayMap = DISPLAY IN GOOGLE MAP LOCATION
 
-label.trackingData = Tracking data
-label.trackingData.componentDescription = Displays tracking data for the current user
+label.trackingDataViewer = Tracking data viewer
+label.trackingDataViewer.componentDescription = Displays tracking data for the current user
+
+label.trackingDataUpdater = Tracking data AJAX updater
+label.trackingDataUpdater.componentDescription = Uses AJAX to update tracking data, which makes it possible to insert Javascript DOM data into the tracking structure such as screen resolution, window size, etc...
