--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,34 @@
             <version>6.6.0.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+           <groupId>net.sourceforge.wurfl</groupId>
+           <artifactId>wurfl</artifactId>
+           <version>1.3.1.1</version>
+           <exclusions>
+               <exclusion>
+                   <groupId>org.slf4j</groupId>
+                   <artifactId>slf4j-api</artifactId>
+               </exclusion>
+               <exclusion>
+                   <groupId>org.slf4j</groupId>
+                   <artifactId>jcl-over-slf4j</artifactId>
+               </exclusion>
+               <exclusion>
+                   <groupId>ch.qos.logback</groupId>
+                   <artifactId>logback-classic</artifactId>
+               </exclusion>
+               <exclusion>
+                   <groupId>ch.qos.logback</groupId>
+                   <artifactId>logback-core</artifactId>
+               </exclusion>
+               <exclusion>
+                   <groupId>org.springframework</groupId>
+                   <artifactId>spring-web</artifactId>
+               </exclusion>
+           </exclusions>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
