- Split tracking updater into AJAX window and screen size tracker and AJAX HTML 5 Location tracker - Add new AJAX time on page tracker - Add some resource bundles

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -49,6 +49,12 @@ jnt_ajaxIncrementUserProperty.j_propertyName = Property name
 jnt_ajaxRemoveUserProperty = Remove current user property (AJAX)
 jnt_ajaxRemoveUserProperty.j_propertyName = Property name
 
+jnt_trackingDataViewer = Tracking data viewer panel
+jnt_ajaxWindowAndScreenSizeTracker = Window and screen size tracker
+jnt_ajaxHTML5LocationTracker = HTML 5 Location tracker
+jnt_trackingDataReport = Tracking data report
+jnt_trackingDataValueExpression = Tracking data value
+
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
 
@@ -97,5 +103,11 @@ label.googleMapEval.displayMap = DISPLAY IN GOOGLE MAP LOCATION
 label.trackingDataViewer = Tracking data viewer
 label.trackingDataViewer.componentDescription = Displays tracking data for the current user
 
-label.trackingDataUpdater = Tracking data AJAX updater
-label.trackingDataUpdater.componentDescription = Uses AJAX to update tracking data, which makes it possible to insert Javascript DOM data into the tracking structure such as screen resolution, window size, etc...
+label.ajaxWindowAndScreenSizeTracker = AJAX Window and screen size tracker
+label.ajaxWindowAndScreenSizeTracker.componentDescription = Uses AJAX to update tracking data with current window and screen size
+
+label.ajaxHTML5LocationTracker = AJAX HTML 5 Location tracker
+label.ajaxHTML5LocationTracker.componentDescription = Uses AJAX to update tracking data with HTML 5 location data if available
+
+label.ajaxTimeOnPageTracker = AJAX Time on page tracker
+label.ajaxTimeOnPageTracker.componentDescription = Uses AJAX to update tracking data with time spent on page by current user
