- Fix bug in referer code - Add user age property value

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -24,6 +24,7 @@ jnt_cookieValueExpression = Cookie value
 jnt_cookieValueExpression.j_cookieName = Cookie name
 jnt_userPropertyValueExpression = Current user property value
 jnt_userPropertyValueExpression.j_propertyName = Property name
+jnt_userAgePropertyValueExpression = Current user's age
 jnt_locationValueExpression = Geo location (latitude/longitude) value
 jnt_locationValueExpression.j_latitude = Latitude
 jnt_locationValueExpression.j_longitude = Longitude
