--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,11 @@
                </exclusion>
            </exclusions>
         </dependency>
-
+        <dependency>
+            <groupId>nl.bitwalker</groupId>
+            <artifactId>UserAgentUtils</artifactId>
+            <version>1.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
