- Make the spam post limiter configurable so that it can work in preview mode too (default) - Fix tracking data serialization - Add limit to tracking data property definition, and implement it - Add more french translations (still not complete) - Add some missing resource entries

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -53,8 +53,10 @@ jnt_ajaxRemoveUserProperty.j_propertyName = Property name
 jnt_trackingDataViewer = Tracking data viewer panel
 jnt_ajaxWindowAndScreenSizeTracker = Window and screen size tracker
 jnt_ajaxHTML5LocationTracker = HTML 5 Location tracker
+jnt_ajaxTimeOnPageTracker = Time on page tracker
 jnt_trackingDataReport = Tracking data report
 jnt_trackingDataValueExpression = Tracking data value
+jnt_trackingDataValueExpression.j_propertyName = Property name
 
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
