- Add increment possibility to trackers - Renamed method to add a tracking value - Allow for counter property definitions (still to be fully implemented)

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -114,3 +114,7 @@ label.ajaxHTML5LocationTracker.componentDescription = Uses AJAX to update tracki
 
 label.ajaxTimeOnPageTracker = AJAX Time on page tracker
 label.ajaxTimeOnPageTracker.componentDescription = Uses AJAX to update tracking data with time spent on page by current user
+
+label.ajaxIncrementTrackingProperty = AJAX Increment tracking property
+label.ajaxIncrementTrackingProperty.componentDescription = Uses AJAX to increment a specified tracking data property
+label.ajaxIncrementTrackingProperty.willIncrementProperty = This component will increment current user''s property ''{0}''
