- Initial work on condition mailing job - More work on tracking data type definitions - Fixed Javascript problem on tracking viewer panel when no location data exists - Started implementing Google Maps reverse geocoding to get data from location -

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -28,6 +28,7 @@ jnt_userAgePropertyValueExpression = Current user's age
 jnt_locationValueExpression = Geo location (latitude/longitude) value
 jnt_locationValueExpression.j_latitude = Latitude
 jnt_locationValueExpression.j_longitude = Longitude
+jnt_googleReverseGeoCodeLocationExpression = Reverse geocode location (Google)
 
 jnt_ifThenElse = IF condition THEN then ELSE else
 jnt_eval = Evaluate an expression and display it
@@ -57,6 +58,7 @@ jnt_ajaxTimeOnPageTracker = Time on page tracker
 jnt_trackingDataReport = Tracking data report
 jnt_trackingDataValueExpression = Tracking data value
 jnt_trackingDataValueExpression.j_propertyName = Property name
+jnt_ajaxIncrementTrackingProperty = Increment tracking property (AJAX)
 
 label.incrementCookie.componentDescription = This component increments a cookie each time it is displayed.
 label.incrementCookieArea = Increment cookie area
