- Google reverse geocode component now works and has complete resource bundles

--- a/src/main/webapp/resources/personalization.properties
+++ b/src/main/webapp/resources/personalization.properties
@@ -29,6 +29,12 @@ jnt_locationValueExpression = Geo location (latitude/longitude) value
 jnt_locationValueExpression.j_latitude = Latitude
 jnt_locationValueExpression.j_longitude = Longitude
 jnt_googleReverseGeoCodeLocationExpression = Reverse geocode location (Google)
+jnt_googleReverseGeoCodeLocationExpression.j_addressComponent = Address component to extract
+jnt_googleReverseGeoCodeLocationExpression.j_addressComponent.street_number = Street number
+jnt_googleReverseGeoCodeLocationExpression.j_addressComponent.route = Street
+jnt_googleReverseGeoCodeLocationExpression.j_addressComponent.locality = Locality
+jnt_googleReverseGeoCodeLocationExpression.j_addressComponent.country = Country code
+jnt_googleReverseGeoCodeLocationExpression.j_addressComponent.postal_code = Postal code
 
 jnt_ifThenElse = IF condition THEN then ELSE else
 jnt_eval = Evaluate an expression and display it
